--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.2.13",
+    "vue-fontawesome": "^0.0.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -24,6 +35,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
