--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.2.13",
     "vue-fontawesome": "^0.0.2",
     "vue-router": "^4.0.3",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
