--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@k90mirzaei/vue-toast": "^1.0.3",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "emailjs-com": "^3.2.0",
